[package]
name = "robot-car"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "1.0.0"
i2cdev = "0.6.0"
linux-embedded-hal = "0.3.0"
pwm-pca9685 = "0.3.1"
ros2-client = "0.6.1"
rppal = { version = "0.17.1", features = ["hal"] }
