[package]
name = "robot-car"
version = "0.1.0"
edition = "2021"

[patch.crates-io.rclrs]
path = "/home/pirobot/workspace/install/rclrs/share/rclrs/rust"

[patch.crates-io.rosidl_runtime_rs]
path = "/home/pirobot/workspace/install/rosidl_runtime_rs/share/rosidl_runtime_rs/rust"

[patch.crates-io.visualization_msgs]
path = "/home/pirobot/workspace/install/visualization_msgs/share/visualization_msgs/rust"

[patch.crates-io.test_msgs]
path = "/home/pirobot/workspace/install/test_msgs/share/test_msgs/rust"

[patch.crates-io.examples_rclrs_minimal_client_service]
path = "/home/pirobot/workspace/install/examples_rclrs_minimal_client_service/share/examples_rclrs_minimal_client_service/rust"

[patch.crates-io.example_interfaces]
path = "/home/pirobot/workspace/install/example_interfaces/share/example_interfaces/rust"

[patch.crates-io.action_msgs]
path = "/home/pirobot/workspace/install/action_msgs/share/action_msgs/rust"

[patch.crates-io.unique_identifier_msgs]
path = "/home/pirobot/workspace/install/unique_identifier_msgs/share/unique_identifier_msgs/rust"

[patch.crates-io.trajectory_msgs]
path = "/home/pirobot/workspace/install/trajectory_msgs/share/trajectory_msgs/rust"

[patch.crates-io.std_srvs]
path = "/home/pirobot/workspace/install/std_srvs/share/std_srvs/rust"

[patch.crates-io.shape_msgs]
path = "/home/pirobot/workspace/install/shape_msgs/share/shape_msgs/rust"

[patch.crates-io.sensor_msgs]
path = "/home/pirobot/workspace/install/sensor_msgs/share/sensor_msgs/rust"

[patch.crates-io.nav_msgs]
path = "/home/pirobot/workspace/install/nav_msgs/share/nav_msgs/rust"

[patch.crates-io.diagnostic_msgs]
path = "/home/pirobot/workspace/install/diagnostic_msgs/share/diagnostic_msgs/rust"

[patch.crates-io.geometry_msgs]
path = "/home/pirobot/workspace/install/geometry_msgs/share/geometry_msgs/rust"

[patch.crates-io.examples_rclrs_minimal_pub_sub]
path = "/home/pirobot/workspace/install/examples_rclrs_minimal_pub_sub/share/examples_rclrs_minimal_pub_sub/rust"

[patch.crates-io.actionlib_msgs]
path = "/home/pirobot/workspace/install/actionlib_msgs/share/actionlib_msgs/rust"

[patch.crates-io.std_msgs]
path = "/home/pirobot/workspace/install/std_msgs/share/std_msgs/rust"

[patch.crates-io.statistics_msgs]
path = "/home/pirobot/workspace/install/statistics_msgs/share/statistics_msgs/rust"

[patch.crates-io.examples_rclrs_message_demo]
path = "/home/pirobot/workspace/install/examples_rclrs_message_demo/share/examples_rclrs_message_demo/rust"

[patch.crates-io.rosgraph_msgs]
path = "/home/pirobot/workspace/install/rosgraph_msgs/share/rosgraph_msgs/rust"

[patch.crates-io.rclrs_example_msgs]
path = "/home/pirobot/workspace/install/rclrs_example_msgs/share/rclrs_example_msgs/rust"

[patch.crates-io.composition_interfaces]
path = "/home/pirobot/workspace/install/composition_interfaces/share/composition_interfaces/rust"

[patch.crates-io.rcl_interfaces]
path = "/home/pirobot/workspace/install/rcl_interfaces/share/rcl_interfaces/rust"

[patch.crates-io.lifecycle_msgs]
path = "/home/pirobot/workspace/install/lifecycle_msgs/share/lifecycle_msgs/rust"

[patch.crates-io.builtin_interfaces]
path = "/home/pirobot/workspace/install/builtin_interfaces/share/builtin_interfaces/rust"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linux-embedded-hal = "0.3.0"
pwm-pca9685 = "0.3.1"
anyhow = {version = "1", features = ["backtrace"]}

[dependencies.rclrs]
version = "0.4"

[dependencies.rosidl_runtime_rs]
version = "0.4"

[dependencies.sensor_msgs]
version = "*"


[package.metadata.ros]
install_to_share = ["launch"]
