[package]
name = "radxa-controller"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linux-embedded-hal = "0.3.0"
pwm-pca9685 = "0.3.1"
anyhow = {version = "1", features = ["backtrace"]}

[dependencies.rclrs]
version = "0.4"

[dependencies.rosidl_runtime_rs]
version = "0.4"

[dependencies.sensor_msgs]
version = "*"


[package.metadata.ros]
install_to_share = ["launch"]
